# reflink

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
examples/: compare.rs
src/: lib.rs
src/sys/: ioctl_fragment.rs  mod.rs  others.rs  unix.rs  utility.rs  windows.rs  windows_impl.rs
src/sys/unix/: linux.rs  macos.rs  mod.rs
tests/: reflink.rs
