[package]
name = "reflink"
version = "0.1.3"
authors = ["Nicolas Koch <nioko1337@gmail.com>"]
edition = "2018"
description = "copy-on-write mechanism on supported file systems"
documentation = "https://docs.rs/reflink/*/reflink/"
homepage = "https://github.com/nicokoch/reflink"
repository = "https://github.com/nicokoch/reflink"
readme = "README.md"
keywords = ["reflink", "COW", "copy", "btrfs", "xfs"]
categories = ["filesystem", "os"]
license = "MIT/Apache-2.0"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "nicokoch/reflink" }

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
ioctl-sys = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Ioctl", "Win32_System_IO", "Win32_System_SystemServices"] }

[dev-dependencies]
tempfile = "3.3.0"
