[package]
name = "reflink-copy"
version = "0.1.7"
authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
edition = "2018"
description = "copy-on-write mechanism on supported file systems"
documentation = "https://docs.rs/reflink-copy"
homepage = "https://github.com/cargo-bins/reflink-copy"
repository = "https://github.com/cargo-bins/reflink-copy"
readme = "README.md"
keywords = ["reflink", "COW", "copy", "btrfs", "xfs"]
categories = ["filesystem", "os"]
license = "MIT/Apache-2.0"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ioctl-sys = "0.8.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Ioctl", "Win32_System_IO", "Win32_System_SystemServices"] }

[dev-dependencies]
tempfile = "3.3.0"
